--- a/index.html
+++ b/index.html
@@ -213,15 +213,15 @@
 
           <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/WhatsApp Image 2025-03-05 at 21.27.57.jpeg" class="img-fluid" style="width: 180px;height: auto;" alt=""></div>
+              <div class="pic"><img src="assets/img/my photo.jpg" class="img-fluid" style="width: 240px;height: auto;" alt=""></div>
               <div class="member-info">
                 <h4>Chinmay Dalvi</h4>
                 <span>Chief Executive Officer</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.facebook.com/share/1AgEzCtFCh/?mibextid=qi2Omg"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/itz_chinmay._09/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/chinmay-dalvi-135450291/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -229,7 +229,7 @@
 
           <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/WhatsApp Image 2025-03-05 at 23.52.33.jpeg" class="img-fluid" style="width: 180px;height: auto;" alt=""></div>
+              <div class="pic"><img src="assets/img/team/WhatsApp Image 2025-03-05 at 23.52.33.jpeg" class="img-fluid" style="width: 200px;height: auto;" alt=""></div>
               <div class="member-info">
                 <h4>Tanmay Shingote</h4>
                 <span>Manager</span>
@@ -440,7 +440,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-      
+       Designed by <a >EstateAgency</a>
       </div>
     </div>
 
